<resources>
    <string name="app_name">Lucky Calories</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="fragment_login_email">Email</string>
    <string name="fragment_login_password">Password</string>
    <string name="fragment_login_login">Log In</string>
    <string name="fragment_login_forgot">Forgot Password</string>
    <string name="fragment_login_sign_up">Sign Up</string>

    <string name="fragment_sign_up_name">Name</string>
    <string name="fragment_sign_up_repeat_password">Repeat password</string>

    <string name="menu_main_calories">Calories</string>
    <string name="menu_main_filters">Filters</string>
    <string name="menu_main_settings">Settings</string>
    <string name="menu_main_users">Users</string>
    <string name="menu_main_main_user">Main User</string>


    <string name="save">SAVE</string>
    <string name="fragment_edit_meal">Meal</string>
    <string name="fragment_edit_kcal">Calories (kcal)</string>
    <string name="fragment_edit_time">Time</string>
    <string name="fragment_edit_date">Date</string>
    <string name="fragment_edit_comments">Comments</string>

    <string name="settings">Settings</string>
    <string name="fragment_settings_daily_calories">Daily Calories</string>
    <string name="fragment_settings_daily_calories_info">Expected number of calories per day.</string>
    <string name="fragment_settings_calories">Calories</string>

    <string name="fragment_users_edit">Edit</string>
    <string name="fragment_users_delete">Delete</string>
    <string name="fragment_users_name">Name</string>
    <string name="fragment_users_email">Email</string>
    <string name="fragment_users_daily">Daily Calories Limit</string>

    <string name="fragment_users_impersonate">Impersonate</string>

</resources>
