<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_margin="8dp"
    app:cardCornerRadius="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:paddingTop="24dp"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/txtName" />

        <Button
            android:visibility="invisible"
            android:layout_margin="8dp"
            android:textColor="#F44336"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:text="@string/fragment_users_impersonate"
            android:id="@+id/btnImpersonate"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_below="@id/txtName"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/txtEmail" />

        <TextView
            android:padding="16dp"
            android:layout_below="@id/txtEmail"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/txtDailyCalorie" />

        <Button
            android:layout_margin="8dp"
            android:layout_below="@id/txtDailyCalorie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_users_edit"
            android:id="@+id/btnEdit" />

        <Button
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:layout_below="@id/txtDailyCalorie"
            android:layout_toRightOf="@id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_users_delete"
            android:id="@+id/btnDelete" />

    </RelativeLayout>

</android.support.v7.widget.CardView>